add Pessoa entity

--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,14 @@
     "require": {
         "php": "^7.0.8",
         "ext-iconv": "*",
+        "ramsey/uuid-doctrine": "^1.4",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^3.4",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.4",
         "symfony/lts": "^3",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/orm-pack": "^1.0",
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
