--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "^3.4",
+        "symfony/validator": "^3.4",
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
