--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -16,7 +16,9 @@ doctrine:
         url: '%env(resolve:DATABASE_URL)%'
 
         types:
-           uuid:  Ramsey\Uuid\Doctrine\UuidType
+           uuid_binary:  Ramsey\Uuid\Doctrine\UuidBinaryType
+        mapping_types:
+           uuid_binary: binary
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
